fix layout bugs, display posts by cathegory

--- a/src/base/_base.scss
+++ b/src/base/_base.scss
@@ -10,7 +10,8 @@ html {
     box-sizing: border-box;
     scroll-behavior: smooth;
     box-sizing: border-box;
-    font-size: 37.5%; //1rem - 6px
+    // font-size: 37.5%; //1rem - 6px
+    font-size: 50%; //1rem - 8px
     width: 100vw;
     overflow-x: hidden;
 
@@ -29,6 +30,7 @@ body {
     display: flex;
     flex-direction: column;
     max-width: 100%;
+    overflow: hidden;
 };
 h1 {
     color: white;
