--- a/src/layout/_footer.scss
+++ b/src/layout/_footer.scss
@@ -1,6 +1,6 @@
 .footer {
     width: 100vw;
-    min-height: 30vh;
+    // min-height: 30vh;
     background-color: $color-primary;
     color: white;
     display: flex;
